# creature_math_fighter

./: Cargo.toml  PKGBUILD  README.md  build.rs  creature_fighter-bin-0.1.0-1-x86_64.pkg.tar.zst
assets/: template.toml
assets/porcupine/: porcupine.toml
assets/snester/: snester.piskel
pkg/creature_fighter-bin/: .BUILDINFO  .MTREE  .PKGINFO
src/: README.md  condition.rs  creature.rs  creature_fighter  creature_fighter.fl  creature_fighter.rs  element.rs  item.rs  item_images.rs  main.rs  moves.rs  signals.rs
src/buttons/: button_images.rs
src/items/: crystal.xpm
