[package]
name = "creature_fighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.2"
ez-pixmap = "0.2"
rand = "0.8.4"
#fltk-form = "0.1"
#fltk-form-derive = "0.1"

[build-dependencies]
fl2rust = "0.4.9"
